--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
   <title>Css Bayan</title>
 </head>
 <body class="page__body">
-  <h1 class="title">Css Bayan</h1>
+  <h1 class="title">Css Bayan - Little storty behind your coffee cup</h1>
   <div class="accordion">
     <label for="category-1" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-1">
-      <h2 class="category__title">First</h2>
-      <img class="category__img" src="" alt="First image" width="200" height="auto">
+      <h2 class="category__title">First it is growing</h2>
+      <img class="category__img" src="./assets/growing.jpg" alt="First image" width="200" height="auto">
     </label>
     <label for="category-2" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-2">
-      <h2 class="category__title">Second</h2>
-      <img class="category__img" src="" alt="Second image" width="200" height="auto">
+      <h2 class="category__title">Second - it is being processed</h2>
+      <img class="category__img" src="./assets/depulping.jpg" alt="Second image" width="200" height="auto">
     </label>
     <label for="category-3" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-3">
-      <h2 class="category__title">Third</h2>
-      <img class="category__img" src="" alt="Third image" width="200" height="auto">
+      <h2 class="category__title">Third - it is roasted</h2>
+      <img class="category__img" src="./assets/roasting.jpg" alt="Third image" width="200" height="auto">
     </label>
     <label for="category-4" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-4">
-      <h2 class="category__title">Fourth</h2>
-      <img class="category__img" src="" alt="Fourth image" width="200" height="auto">
+      <h2 class="category__title">Fourth - it is brewed</h2>
+      <img class="category__img" src="./assets/brewing.jpg" alt="Fourth image" width="200" height="auto">
     </label>
     <label for="category-5" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-5">
-      <h2 class="category__title">Fifth</h2>
-      <img class="category__img" class="category__img" src="" alt="Fifth image" width="200" height="auto">
+      <h2 class="category__title">Fifth - your are enjoying</h2>
+      <img class="category__img" class="category__img" src="./assets/enjoying.jpg" alt="Fifth image" width="200" height="auto">
     </label>
-    <label for="category-6" class="accordion__category category">
+    <!-- <label for="category-6" class="accordion__category category">
       <input class="category__checkbox" type="checkbox" id="category-6">
       <h2 class="category__title">Sixth</h2>
       <img class="category__img" class="category__img" src="" alt="Sixth image" width="200" height="auto">
-    </label>
+    </label> -->
   </div>
 </body>
 </html>
